FR Translation for teckel decotext

--- a/translations/items+intl-icu.fr.xlf
+++ b/translations/items+intl-icu.fr.xlf
@@ -9297,7 +9297,7 @@
       </notes>
       <segment>
         <source>Verbessert die Verteidigung und verhindert Diebstähle</source>
-        <target>Verbessert die Verteidigung und verhindert Diebstähle</target>
+        <target>Améliore la défense et empêche les vols</target>
       </segment>
     </unit>
   </file>
