EN Translation for teckel decotext

--- a/translations/items+intl-icu.en.xlf
+++ b/translations/items+intl-icu.en.xlf
@@ -9305,7 +9305,7 @@ You put every effort into it. Then, after some time passes, you retrieve a {item
       </notes>
       <segment>
         <source>Verbessert die Verteidigung und verhindert Diebstähle</source>
-        <target>Verbessert die Verteidigung und verhindert Diebstähle</target>
+        <target>Improves defenses and prevents theft</target>
       </segment>
     </unit>
   </file>
