--- a/translations/game+intl-icu.es.xlf
+++ b/translations/game+intl-icu.es.xlf
@@ -22954,5 +22954,15 @@
         <target>El Alma en MyHordes</target>
       </segment>
     </unit>
+    <unit id="NRlmARU" name="Gerechtigkeit in MyHordes">
+      <notes>
+        <note category="german">Justice in MyHordes</note>
+        <note category="from">twig:///templates/ajax/game/town/home.html.twig</note>
+      </notes>
+      <segment>
+        <source>Gerechtigkeit in MyHordes</source>
+        <target>La justicia en MyHordes</target>
+      </segment>
+    </unit>
   </file>
 </xliff>
