--- a/translations/game+intl-icu.fr.xlf
+++ b/translations/game+intl-icu.fr.xlf
@@ -22912,7 +22912,7 @@ cette violente opération...]]></target>
     </unit>
     <unit id="NRlmARU" name="Gerechtigkeit in MyHordes">
       <notes>
-        <note category="german">Justice in MyHordes</note>
+        <note category="german">Gerechtigkeit in MyHordes</note>
         <note category="from">twig:///templates/ajax/game/town/home.html.twig</note>
       </notes>
       <segment>
