FR Correction for report tooltip

--- a/translations/global+intl-icu.fr.xlf
+++ b/translations/global+intl-icu.fr.xlf
@@ -1303,7 +1303,7 @@
       </notes>
       <segment>
         <source>Unangemessene Nachricht blockieren</source>
-        <target>Bloquer un message inapproprié</target>
+        <target>Signaler</target>
       </segment>
     </unit>
     <unit id="pqMtvFY" name="Link">
