ES Translation, Correction

--- a/translations/game+intl-icu.es.xlf
+++ b/translations/game+intl-icu.es.xlf
@@ -21638,7 +21638,7 @@
       </notes>
       <segment>
         <source>Diese Option steht dir ab sofort zur Verfügung, da du auf deiner Seelenseite den Diktatorbonus freigeschaltet hast.</source>
-        <target>La ves porque has desbloqueado la ventaja llamda Dictador en tu sección de Alma.</target>
+        <target>La ves porque has desbloqueado la ventaja llamada Dictador en tu sección de Alma.</target>
       </segment>
     </unit>
     <unit id="4Uzw2JG" name="Mehr darüber erfahren...">
