ES Translation, Correction

--- a/translations/game+intl-icu.es.xlf
+++ b/translations/game+intl-icu.es.xlf
@@ -16189,7 +16189,7 @@
       </notes>
       <segment>
         <source>Sind wir noch in der Alpha?</source>
-        <target>¿Ya salimos de la verisón Alfa?</target>
+        <target>¿Ya salimos de la versión Alfa?</target>
       </segment>
     </unit>
     <unit id="OA64trN">
