--- a/translations/admin+intl-icu.de.xlf
+++ b/translations/admin+intl-icu.de.xlf
@@ -2551,5 +2551,83 @@
         <target>Neues Icon</target>
       </segment>
     </unit>
+    <unit id="inFhWaa" name="Kernel">
+      <segment>
+        <source>Kernel</source>
+        <target>Kernel</target>
+      </segment>
+    </unit>
+    <unit id="wcEAnT8" name="Update">
+      <segment>
+        <source>Update</source>
+        <target>Update</target>
+      </segment>
+    </unit>
+    <unit id="J2.6H7T" name="Unbekannt">
+      <segment>
+        <source>Unbekannt</source>
+        <target>Unbekannt</target>
+      </segment>
+    </unit>
+    <unit id="OdO2n.0" name="Täglich">
+      <segment>
+        <source>Täglich</source>
+        <target>Täglich</target>
+      </segment>
+    </unit>
+    <unit id="1LsNnOC" name="Wöchentlich">
+      <segment>
+        <source>Wöchentlich</source>
+        <target>Wöchentlich</target>
+      </segment>
+    </unit>
+    <unit id=".QA57M1" name="Monatlich">
+      <segment>
+        <source>Monatlich</source>
+        <target>Monatlich</target>
+      </segment>
+    </unit>
+    <unit id="lhysqm5" name="Manuell">
+      <segment>
+        <source>Manuell</source>
+        <target>Manuell</target>
+      </segment>
+    </unit>
+    <unit id="Iv9Lj0S" name="Nicht komprimiert">
+      <segment>
+        <source>Nicht komprimiert</source>
+        <target>Nicht komprimiert</target>
+      </segment>
+    </unit>
+    <unit id="fW.TFsL" name="Systemlogs">
+      <segment>
+        <source>Systemlogs</source>
+        <target>Systemlogs</target>
+      </segment>
+    </unit>
+    <unit id="mD79rvJ" name="Datenbank-Backups">
+      <segment>
+        <source>Datenbank-Backups</source>
+        <target>Datenbank-Backups</target>
+      </segment>
+    </unit>
+    <unit id="EzEnW8U" name="Tags">
+      <segment>
+        <source>Tags</source>
+        <target>Tags</target>
+      </segment>
+    </unit>
+    <unit id="6QKKVpK" name="Datei">
+      <segment>
+        <source>Datei</source>
+        <target>Datei</target>
+      </segment>
+    </unit>
+    <unit id="VwKZlwh" name="Dateigröße: {s}">
+      <segment>
+        <source>Dateigröße: {s}</source>
+        <target>Dateigröße: {s}</target>
+      </segment>
+    </unit>
   </file>
 </xliff>
