--- a/translations/admin+intl-icu.es.xlf
+++ b/translations/admin+intl-icu.es.xlf
@@ -608,7 +608,7 @@
     <unit id="DNyzXO8" name="Angriff">
       <notes>
         <note category="german">Angriff</note>
-        <note category="from">twig:///templates/ajax/admin/towns/explorer.html.twig</note>
+        <note category="from">php:///src/Controller/Admin/AdminFileSystemController.php;twig:///templates/ajax/admin/towns/explorer.html.twig</note>
       </notes>
       <segment>
         <source>Angriff</source>
@@ -779,7 +779,7 @@
     <unit id="Vlb5Lbe" name="Aktionen">
       <notes>
         <note category="german">Aktionen</note>
-        <note category="from">twig:///templates/ajax/admin/dash.html.twig;twig:///templates/ajax/admin/reports/reports.html.twig;twig:///templates/ajax/admin/towns/explorer.html.twig;twig:///templates/ajax/admin/towns/list.html.twig;twig:///templates/ajax/admin/towns/old_towns_list.html.twig;twig:///templates/ajax/admin/users/account.html.twig</note>
+        <note category="from">twig:///templates/ajax/admin/dash.html.twig;twig:///templates/ajax/admin/files/list.html.twig;twig:///templates/ajax/admin/reports/reports.html.twig;twig:///templates/ajax/admin/towns/explorer.html.twig;twig:///templates/ajax/admin/towns/list.html.twig;twig:///templates/ajax/admin/towns/old_towns_list.html.twig;twig:///templates/ajax/admin/users/account.html.twig</note>
       </notes>
       <segment>
         <source>Aktionen</source>
@@ -2474,7 +2474,7 @@
     <unit id="kTWILTI" name="Datum">
       <notes>
         <note category="german">Datum</note>
-        <note category="from">twig:///templates/ajax/admin/users/ban.html.twig</note>
+        <note category="from">twig:///templates/ajax/admin/files/list.html.twig;twig:///templates/ajax/admin/users/ban.html.twig</note>
       </notes>
       <segment>
         <source>Datum</source>
@@ -4003,6 +4003,149 @@
       <segment>
         <source>Neues Icon</source>
         <target>Nuevo icono</target>
+      </segment>
+    </unit>
+    <unit id="inFhWaa" name="Kernel">
+      <notes>
+        <note category="german">Kernel</note>
+        <note category="from">php:///src/Controller/Admin/AdminFileSystemController.php</note>
+        <note category="state">new</note>
+      </notes>
+      <segment>
+        <source>Kernel</source>
+        <target>Kernel</target>
+      </segment>
+    </unit>
+    <unit id="wcEAnT8" name="Update">
+      <notes>
+        <note category="german">Update</note>
+        <note category="from">php:///src/Controller/Admin/AdminFileSystemController.php</note>
+        <note category="state">new</note>
+      </notes>
+      <segment>
+        <source>Update</source>
+        <target>Update</target>
+      </segment>
+    </unit>
+    <unit id="J2.6H7T" name="Unbekannt">
+      <notes>
+        <note category="german">Unbekannt</note>
+        <note category="from">php:///src/Controller/Admin/AdminFileSystemController.php</note>
+        <note category="state">new</note>
+      </notes>
+      <segment>
+        <source>Unbekannt</source>
+        <target>Unbekannt</target>
+      </segment>
+    </unit>
+    <unit id="OdO2n.0" name="Täglich">
+      <notes>
+        <note category="german">Täglich</note>
+        <note category="from">php:///src/Controller/Admin/AdminFileSystemController.php</note>
+        <note category="state">new</note>
+      </notes>
+      <segment>
+        <source>Täglich</source>
+        <target>Täglich</target>
+      </segment>
+    </unit>
+    <unit id="1LsNnOC" name="Wöchentlich">
+      <notes>
+        <note category="german">Wöchentlich</note>
+        <note category="from">php:///src/Controller/Admin/AdminFileSystemController.php</note>
+        <note category="state">new</note>
+      </notes>
+      <segment>
+        <source>Wöchentlich</source>
+        <target>Wöchentlich</target>
+      </segment>
+    </unit>
+    <unit id=".QA57M1" name="Monatlich">
+      <notes>
+        <note category="german">Monatlich</note>
+        <note category="from">php:///src/Controller/Admin/AdminFileSystemController.php</note>
+        <note category="state">new</note>
+      </notes>
+      <segment>
+        <source>Monatlich</source>
+        <target>Monatlich</target>
+      </segment>
+    </unit>
+    <unit id="lhysqm5" name="Manuell">
+      <notes>
+        <note category="german">Manuell</note>
+        <note category="from">php:///src/Controller/Admin/AdminFileSystemController.php</note>
+        <note category="state">new</note>
+      </notes>
+      <segment>
+        <source>Manuell</source>
+        <target>Manuell</target>
+      </segment>
+    </unit>
+    <unit id="Iv9Lj0S" name="Nicht komprimiert">
+      <notes>
+        <note category="german">Nicht komprimiert</note>
+        <note category="from">php:///src/Controller/Admin/AdminFileSystemController.php</note>
+        <note category="state">new</note>
+      </notes>
+      <segment>
+        <source>Nicht komprimiert</source>
+        <target>Nicht komprimiert</target>
+      </segment>
+    </unit>
+    <unit id="fW.TFsL" name="Systemlogs">
+      <notes>
+        <note category="german">Systemlogs</note>
+        <note category="from">twig:///templates/ajax/admin/files/list.html.twig</note>
+        <note category="state">new</note>
+      </notes>
+      <segment>
+        <source>Systemlogs</source>
+        <target>Systemlogs</target>
+      </segment>
+    </unit>
+    <unit id="mD79rvJ" name="Datenbank-Backups">
+      <notes>
+        <note category="german">Datenbank-Backups</note>
+        <note category="from">twig:///templates/ajax/admin/files/list.html.twig</note>
+        <note category="state">new</note>
+      </notes>
+      <segment>
+        <source>Datenbank-Backups</source>
+        <target>Datenbank-Backups</target>
+      </segment>
+    </unit>
+    <unit id="EzEnW8U" name="Tags">
+      <notes>
+        <note category="german">Tags</note>
+        <note category="from">twig:///templates/ajax/admin/files/list.html.twig</note>
+        <note category="state">new</note>
+      </notes>
+      <segment>
+        <source>Tags</source>
+        <target>Tags</target>
+      </segment>
+    </unit>
+    <unit id="6QKKVpK" name="Datei">
+      <notes>
+        <note category="german">Datei</note>
+        <note category="from">twig:///templates/ajax/admin/files/list.html.twig</note>
+        <note category="state">new</note>
+      </notes>
+      <segment>
+        <source>Datei</source>
+        <target>Datei</target>
+      </segment>
+    </unit>
+    <unit id="VwKZlwh" name="Dateigröße: {s}">
+      <notes>
+        <note category="german">Dateigröße: {s}</note>
+        <note category="from">twig:///templates/ajax/admin/files/list.html.twig</note>
+        <note category="state">new</note>
+      </notes>
+      <segment>
+        <source>Dateigröße: {s}</source>
+        <target>Dateigröße: {s}</target>
       </segment>
     </unit>
   </file>
